--- a/examples/fedavg/fedavg_lenet5.yml
+++ b/examples/fedavg/fedavg_lenet5.yml
@@ -6,7 +6,7 @@ clients:
     total_clients: 3597
 
     # The number of clients selected in each round
-    per_round: 700
+    per_round: 10
 
     # Should the clients compute test accuracy locally?
     do_test: false
@@ -43,10 +43,10 @@ trainer:
     type: basic
 
     # The maximum number of training rounds
-    rounds: 50
+    rounds: 1000
 
     # The maximum number of clients running concurrently
-    max_concurrency: 10
+    #max_concurrency: 10
 
     # The target accuracy
     target_accuracy: 0.95
@@ -56,7 +56,7 @@ trainer:
 
     # Number of epoches for local training in each communication round
     epochs: 5
-    batch_size: 512
+    batch_size: 32
     optimizer: SGD
 
 algorithm:
